--- a/pages/admin/storeMapping/storeMapping.module.scss
+++ b/pages/admin/storeMapping/storeMapping.module.scss
@@ -1,6 +1,16 @@
 .brand {
   .row {
     @include data-content-row;
+
+    &.flex {
+      .box:nth-of-type(1) {
+        width: 80%;
+      }
+      .box:nth-of-type(2) {
+        width: 20%;
+        min-width: 40rem;
+      }
+    }
   }
 
   .search-wrap {
