--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -30,14 +30,16 @@
 }
 
 @mixin table-content-wrap {
+  $table-content-wrap-height: 57.4rem;
+
   height: 100%;
-  min-height: 50rem;
+  min-height: $table-content-wrap-height;
   .item {
     height: 100%;
     .loading-data {
       width: 100%;
       height: 100%;
-      min-height: 50rem;
+      min-height: $table-content-wrap-height;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -46,13 +48,20 @@
     .no-data {
       width: 100%;
       height: 100%;
-      min-height: 50rem;
+      min-height: $table-content-wrap-height;
       display: flex;
       justify-content: center;
       align-items: center;
       font-size: 1.5rem;
     }
   }
+}
+
+@mixin table-wrap {
+  height: 50rem;
+  border: 0.1rem solid #eeeeee;
+  padding: 0.5rem;
+  overflow: auto;
 }
 
 @mixin label {
