feat: 테스트 코드 추가

--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -59,8 +59,7 @@
 
 @mixin table-wrap {
   height: 50rem;
-  border: 0.1rem solid #eeeeee;
-  padding: 0.5rem;
+  border: 0.1rem solid #ccc;
   overflow: auto;
 }
 
