결제페이지 추가

--- a/src/components/data/leftNavigation/leftNavigation.module.scss
+++ b/src/components/data/leftNavigation/leftNavigation.module.scss
@@ -93,6 +93,9 @@
             &.menu6::before {
               background: url("/assets/images/data/user/ico_user_nav_sales_off.png") no-repeat 50% 50% / contain;
             }
+            &.menu7::before {
+              background: url("/assets/images/data/user/ico_user_nav_brand_off.png") no-repeat 50% 50% / contain;
+            }
           }
           button.active {
             &.menu1::before {
@@ -112,6 +115,9 @@
             }
             &.menu6::before {
               background: url("/assets/images/data/user/ico_user_nav_sales_on.png") no-repeat 50% 50% / contain;
+            }
+            &.menu7::before {
+              background: url("/assets/images/data/user/ico_user_nav_brand_on.png") no-repeat 50% 50% / contain;
             }
           }
         }
