--- a/src/components/data/renderTable/renderTable.module.scss
+++ b/src/components/data/renderTable/renderTable.module.scss
@@ -1,21 +1,50 @@
 .table-wrap {
   @include table-wrap;
-  overflow-x: auto;
-  padding-bottom: 2rem;
-
   table {
     width: 100%;
     border-spacing: 0;
     thead {
       background-color: #eeeeee;
-      height: 3.5rem;
+      height: 3rem;
       font-size: 1.4rem;
       font-weight: 500;
       line-height: 1.2;
       letter-spacing: -0.014rem;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+      tr + tr {
+        th {
+          border-top: 0.1rem solid $color-white;
+        }
+      }
       th {
-        padding: 0 1rem;
+        background-color: #f2f2f2;
+        position: sticky;
+        top: 0;
+        z-index: 1;
+        padding: 0.7rem 1rem;
         white-space: nowrap;
+        .text {
+          position: relative;
+          display: inline-block;
+          .sort {
+            position: absolute;
+            top: 0.4rem;
+            right: -1.4rem;
+            display: inline-block;
+            width: 0.8rem;
+            height: 0.7rem;
+            background: url("/assets/images/data/ico_sort_arrow.png") no-repeat 50% 50% / contain;
+            font-size: 0;
+            &.desc {
+              transform: rotate(-180deg);
+            }
+            &.asc {
+              transform: rotate(0deg);
+            }
+          }
+        }
       }
       th + th {
         border-left: 0.1rem solid $color-white;
@@ -32,14 +61,14 @@
       }
       td {
         background-color: $color-white;
-        height: 3.5rem;
+        height: 3rem;
         color: #5d5d5d;
         font-size: 1.4rem;
         font-weight: 400;
         line-height: 1.2;
         letter-spacing: -0.014rem;
         border-bottom: 0.1rem solid #eeeeee;
-        padding: 1rem 1rem;
+        padding: 0.7rem 1rem;
 
         input {
           width: 100%;
