--- a/src/components/data/leftNavigation/leftNavigation.module.scss
+++ b/src/components/data/leftNavigation/leftNavigation.module.scss
@@ -12,7 +12,7 @@
     .logo-wrap {
       display: inline-block;
       margin: 3rem 0;
-      & > img {
+      img {
         width: 18rem;
         margin-left: 0.4rem;
       }
