feat: 대시보드 추가중

--- a/src/components/data/renderTable/renderTable.module.scss
+++ b/src/components/data/renderTable/renderTable.module.scss
@@ -58,6 +58,13 @@
           background-color: #fffae3;
         }
       }
+      tr.total {
+        td {
+          font-weight: 700;
+          background-color: #fdeea8;
+          border-bottom: 0;
+        }
+      }
       td {
         background-color: $color-white;
         height: 3rem;
