feat: 대시보드 월매출, 단위 추가

--- a/pages/data/common/dashboard/dashboard.module.scss
+++ b/pages/data/common/dashboard/dashboard.module.scss
@@ -40,5 +40,14 @@
 
       margin-bottom: 2rem;
     }
+    .text {
+      text-align: right;
+      color: #a6a4a4;
+      font-size: 1.2rem;
+      font-weight: 400;
+      line-height: 2rem;
+      letter-spacing: -0.024rem;
+      margin-top: 1rem;
+    }
   }
 }
