feat: 차트 이미지 저장 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -141,6 +141,9 @@
 .react-datepicker__header {
   padding: 1.2rem 1rem !important;
 }
+.react-datepicker-year-header {
+  font-size: 1.5rem !important;
+}
 
 .react-datepicker__current-month {
   font-size: 1.4em !important;
@@ -162,12 +165,13 @@
 }
 
 .react-datepicker__month-container {
-  max-width: 30rem !important; /* 팝업 최대 너비 설정 */
+  max-width: 30rem !important;
 }
 
-.react-datepicker__day--selected {
-  background-color: #333 !important; /* 선택된 날짜 배경색 설정 (옵션) */
-  color: #fff !important; /* 선택된 날짜 텍스트색 설정 (옵션) */
+.react-datepicker__day--selected,
+.react-datepicker__month-text--today {
+  background-color: #333 !important;
+  color: #fff !important;
 }
 
 .react-datepicker__navigation-icon::before {
