--- a/src/components/data/barChart/barChart.module.scss
+++ b/src/components/data/barChart/barChart.module.scss
@@ -1,45 +1,53 @@
-.chart-container {
-  overflow-x: auto;
-  overflow-y: hidden;
-  min-width: 80rem;
-  max-width: 100%;
-  height: 40rem;
-  margin-top: 2rem;
-}
+.chart {
+  .btn-wrap {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 2rem;
+  }
+  .chart-container {
+    overflow-x: auto;
+    overflow-y: hidden;
+    min-width: 80rem;
+    max-width: 100%;
+    height: 40rem;
+    margin-top: 2rem;
+  }
 
-.custom-legend {
-  display: flex;
-  align-items: center;
-  .label {
+  .custom-legend {
     display: flex;
     align-items: center;
-    color: #a6a4a4;
-    line-height: 100%;
-    & + .label {
-      margin-left: 1rem;
-    }
+    justify-content: flex-end;
+    .label {
+      display: flex;
+      align-items: center;
+      color: #a6a4a4;
+      line-height: 100%;
+      & + .label {
+        margin-left: 1rem;
+      }
 
-    .box {
-      display: inline-block;
-      width: 0.8rem;
-      height: 0.8rem;
-      border-radius: 0.8rem;
-      margin-right: 0.5rem;
-    }
-    .line {
-      display: inline-block;
-      width: 1rem;
-      height: 0.3rem;
-      margin-right: 0.5rem;
+      .box {
+        display: inline-block;
+        width: 0.8rem;
+        height: 0.8rem;
+        border-radius: 0.8rem;
+        margin-right: 0.5rem;
+      }
+      .line {
+        display: inline-block;
+        width: 1rem;
+        height: 0.3rem;
+        margin-right: 0.5rem;
+      }
     }
   }
-}
 
-.custom-tooltip {
-  background-color: #fff;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  .label {
-    margin-bottom: 0.6rem;
+  .custom-tooltip {
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    .label {
+      margin-bottom: 0.6rem;
+    }
   }
 }
