--- a/pages/data/common/salesAnalyze/salesAnalyze.module.scss
+++ b/pages/data/common/salesAnalyze/salesAnalyze.module.scss
@@ -32,3 +32,171 @@
   }
 
 }
+
+.table-wrap {
+  @include table-wrap;
+
+  table {
+    width: 100%;
+    border-spacing: 0;
+    thead {
+      background-color: #eeeeee;
+      height: 3rem;
+      font-size: 1.4rem;
+      font-weight: 500;
+      line-height: 1.2;
+      letter-spacing: -0.014rem;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+
+      tr + tr {
+        th {
+          border-top: 0.1rem solid $color-white;
+        }
+      }
+      th {
+        background-color: #f2f2f2;
+        position: sticky;
+        top: 0;
+        z-index: 1;
+        padding: 0.7rem 1rem;
+        white-space: nowrap;
+        .text {
+          position: relative;
+          display: inline-block;
+          .sort {
+            position: absolute;
+            top: 0.4rem;
+            right: -1.4rem;
+            display: inline-block;
+            width: 0.8rem;
+            height: 0.7rem;
+            background: url("/assets/images/data/ico_sort_arrow.png") no-repeat 50% 50% / contain;
+            font-size: 0;
+            &.desc {
+              transform: rotate(-180deg);
+            }
+            &.asc {
+              transform: rotate(0deg);
+            }
+          }
+        }
+      }
+      th + th {
+        border-left: 0.1rem solid $color-white;
+      }
+      .edit-th {
+        min-width: 50px;
+      }
+    }
+    tbody {
+      td {
+        background-color: $color-white;
+        height: 3rem;
+        color: #5d5d5d;
+        font-size: 1.4rem;
+        font-weight: 400;
+        line-height: 1.2;
+        letter-spacing: -0.014rem;
+        border-bottom: 0.1rem solid #eeeeee;
+        padding: 0.7rem 1rem;
+
+        input {
+          width: 100%;
+          height: 3.8rem;
+          border: 0.1rem solid #ebebeb;
+          &:read-only {
+            background-color: #eeeeee;
+          }
+        }
+        select {
+          width: 100%;
+          border-radius: 0;
+          height: 3.8rem;
+          border: 0.1rem solid #ebebeb;
+        }
+        .button-wrap {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          text-align: center;
+          button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: transparent;
+            border: 0.1rem solid #888;
+            border-radius: 0.3rem;
+            color: #333;
+            font-size: 1.2rem;
+            padding: 0.2rem 0.6rem;
+            white-space: nowrap;
+          }
+
+          button + button {
+            margin-left: 0.5rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+.page-info-wrap {
+  width: 100%;
+  text-align: right;
+  margin-top: 1rem;
+  font-size: 1.2rem;
+  color: #888;
+}
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin: 3rem 0 2rem;
+  .number-wrap {
+    margin: 0 1rem;
+  }
+  button.prev_double {
+    width: 2.4rem;
+    height: 2.4rem;
+    background: url("/assets/images/data/ico_page_double_arrow.png") no-repeat 50% 50% / contain;
+    transform: rotate(-180deg);
+  }
+  button.prev {
+    width: 2.4rem;
+    height: 2.4rem;
+    background: url("/assets/images/data/ico_page_arrow.png") no-repeat 50% 50% / contain;
+    transform: rotate(-180deg);
+  }
+
+  button.number {
+    min-width: 2.4rem;
+    height: 2.4rem;
+    border-radius: 2.4rem;
+    margin: 0 0.5rem;
+    background-color: #eeeeee;
+    color: #9d9d9d;
+  }
+  button.number:disabled {
+    background-color: $color-black;
+    color: $color-white;
+  }
+  button.next {
+    width: 2.4rem;
+    height: 2.4rem;
+    background: url("/assets/images/data/ico_page_arrow.png") no-repeat 50% 50% / contain;
+  }
+  button.next_double {
+    width: 2.4rem;
+    height: 2.4rem;
+    background: url("/assets/images/data/ico_page_double_arrow.png") no-repeat 50% 50% / contain;
+  }
+  button.prev_double:disabled,
+  button.prev:disabled,
+  button.next:disabled,
+  button.next_double:disabled {
+    opacity: 0.3;
+  }
+}
