--- a/src/components/data/barChart/barChart.module.scss
+++ b/src/components/data/barChart/barChart.module.scss
@@ -9,6 +9,10 @@
     overflow-y: hidden;
     min-width: 80rem;
     max-width: 100%;
+  }
+  .chart-ref {
+    display: inline-block;
+    min-width: 100%;
     height: 40rem;
     margin-top: 2rem;
   }
