feat: 서치 영역 구분 수정

--- a/pages/data/common/storeMapping/storeMapping.module.scss
+++ b/pages/data/common/storeMapping/storeMapping.module.scss
@@ -14,13 +14,7 @@
   }
 
   .search-wrap {
-    display: flex;
-    .item + .item {
-      margin-left: 2rem;
-    }
-    .btn-submit {
-      margin-left: 2rem;
-    }
+    @include search-wrap;
   }
   .content-btn-wrap {
     display: flex;
