--- a/src/components/data/searchDateItems/searchDateItems.module.scss
+++ b/src/components/data/searchDateItems/searchDateItems.module.scss
@@ -9,26 +9,14 @@
     padding: 0.8rem;
   }
   label {
-    font-size: 1.6rem;
-    font-weight: 700;
-    line-height: 1.5rem;
-    letter-spacing: -0.016rem;
-    margin-right: 1.5rem;
+    @include label;
   }
 
   select {
-    display: inline-block;
-    width: auto;
-    width: 11rem;
-    border: 0.1rem solid #c2c2c2;
-    background-color: #fbfbfb;
-    background-position: calc(100% - 0.5rem) 50%;
+    @include select;
   }
   input {
-    display: inline-block;
-    width: auto;
-    width: 11rem;
-    border: 0.1rem solid #c2c2c2;
+    @include input;
     background: url("/assets/images/data/ico_calender.png") no-repeat calc(100% - 0.3rem) 50% / contain;
     background-color: #fbfbfb;
     background-size: 2.4rem 2.4rem;
