--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -63,12 +63,27 @@
   overflow: auto;
 }
 
+@mixin search-wrap {
+  display: flex;
+  .item-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem 2rem;
+  }
+
+  .btn-submit {
+    display: flex;
+    margin-left: 2rem;
+  }
+}
+
 @mixin label {
   font-size: 1.6rem;
   font-weight: 700;
   line-height: 1.5rem;
   letter-spacing: -0.016rem;
   margin-right: 1.5rem;
+  white-space: nowrap;
 }
 
 @mixin select {
