--- a/pages/data/common/salesAnalyze/salesAnalyze.module.scss
+++ b/pages/data/common/salesAnalyze/salesAnalyze.module.scss
@@ -200,3 +200,58 @@
     opacity: 0.3;
   }
 }
+
+
+.dashboard {
+  .row {
+    @include data-content-row;
+  }
+
+  .content-wrap {
+    @include table-content-wrap(20rem);
+    min-height: auto;
+
+    .title {
+      font-size: 2rem;
+      line-height: 2.4rem;
+      color: #333333;
+      font-weight: 700;
+      letter-spacing: -0.04rem;
+
+      &.brand {
+        strong {
+          color: #ff993b;
+        }
+      }
+      &.yesterday {
+        strong {
+          color: #f24b4b;
+        }
+      }
+      &.thisMonth {
+        strong {
+          color: #388bec;
+        }
+      }
+
+      .date {
+        color: #a6a4a4;
+        font-size: 1.6rem;
+        font-weight: 400;
+        line-height: 2.4rem;
+        letter-spacing: -0.032rem;
+      }
+
+      margin-bottom: 2rem;
+    }
+    .text {
+      text-align: right;
+      color: #a6a4a4;
+      font-size: 1.2rem;
+      font-weight: 400;
+      line-height: 2rem;
+      letter-spacing: -0.024rem;
+      margin-top: 1rem;
+    }
+  }
+}
