--- a/src/components/data/barChart/barChart.module.scss
+++ b/src/components/data/barChart/barChart.module.scss
@@ -48,6 +48,7 @@
 
   .custom-tooltip {
     background-color: #fff;
+    border: 0.1rem solid #ececec;
     padding: 1rem;
     border-radius: 0.5rem;
     .label {
