--- a/src/components/data/chartPie/chartPie.module.scss
+++ b/src/components/data/chartPie/chartPie.module.scss
@@ -12,6 +12,7 @@
 
 .custom-tooltip {
   background-color: #fff;
+  border: 0.1rem solid #ececec;
   padding: 1rem;
   border-radius: 0.5rem;
   .label {
