--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -65,10 +65,15 @@
 
 @mixin search-wrap {
   display: flex;
-  .item-wrap {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem 2rem;
+  .search-item {
+    display: inline-block;
+    .item-wrap {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 1rem 2rem;
+    }
   }
 
   .btn-submit {
