--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -132,7 +132,7 @@ input[type="checkbox"] + label:before {
   border-radius: 5px;
 }
 
-input[type="checkbox"]:checked + label:after {
+input[type="checkbox"]:checked + label:before {
   content: "";
   position: absolute;
   left: 0;
