매출분석(선택)페이지 추가

--- a/src/components/data/leftNavigation/leftNavigation.module.scss
+++ b/src/components/data/leftNavigation/leftNavigation.module.scss
@@ -90,6 +90,9 @@
             &.sales-analyze::before {
               background: url("/assets/images/data/ico_nav_sales_analyze_off.png") no-repeat 50% 50% / contain;
             }
+            &.sales-analyze-select::before {
+              background: url("/assets/images/data/ico_nav_sales_channel_off.png") no-repeat 50% 50% / contain;
+            }
           }
           button.active {
             &.company::before {
@@ -124,6 +127,9 @@
             }
             &.sales-analyze::before {
               background: url("/assets/images/data/ico_nav_sales_analyze_on.png") no-repeat 50% 50% / contain;
+            }
+            &.sales-analyze-select::before {
+              background: url("/assets/images/data/ico_nav_sales_channel_on.png") no-repeat 50% 50% / contain;
             }
           }
         }
