feat: 비밀번호 회사코드 가맹점코드 숨김처리,  맵핑데이터 체크박스 조건 추가

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,7 +20,8 @@
   }
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
   width: 100%;
   min-height: 3.8rem;
   border: 0.1rem solid #ebebeb;
