--- a/src/components/data/scrapingSearch/scrapingSearch.module.scss
+++ b/src/components/data/scrapingSearch/scrapingSearch.module.scss
@@ -31,10 +31,15 @@
       }
     }
 
+    .join-flag-wrap {
+      display: flex;
+      margin-top: 2rem;
+    }
+
     .content-wrap {
       min-height: auto;
       padding: 1rem;
-      margin-top: 2rem;
+      margin-top: 1rem;
       border: 1px solid #eee;
       background: #fbfbfb;
       border-radius: 0.8rem;
