--- a/pages/data/common/SalesAnalyzeSelect/SalesAnalyzeSelect.module.scss
+++ b/pages/data/common/SalesAnalyzeSelect/SalesAnalyzeSelect.module.scss
@@ -1,15 +1,43 @@
-.brand {
+.analyze-select {
   .row {
     @include data-content-row;
+
+    .box {
+      &.pie {
+        @include table-content-wrap(30rem);
+      }
+      &.bar {
+        @include table-content-wrap(40rem);
+      }
+    }
   }
 
   .search-wrap {
-    display: flex;
-    .item + .item {
-      margin-left: 2rem;
-    }
-    .btn-submit {
-      margin-left: 2rem;
+    @include search-wrap;
+
+    .region-item-wrap {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      max-width: 90rem;
+      margin-top: 2rem;
+      .item {
+        display: inline-flex;
+        align-items: center;
+        padding: 0 0.6rem 0 1rem;
+        background-color: #ededed;
+        color: #333;
+        border-radius: 0.5rem;
+        font-size: 1.3rem;
+        line-height: 2.4rem;
+
+        .close {
+          display: inline-block;
+          width: 0.8rem;
+          height: 0.8rem;
+          background: url("/assets/images/data/ic_item_close.png") no-repeat 50% 50% / contain;
+        }
+      }
     }
   }
   .content-btn-wrap {
@@ -23,14 +51,26 @@
       margin-left: 1.8rem;
     }
   }
-  .content-wrap {
-    @include table-content-wrap;
 
-    &.full-height {
-      min-height: calc(100vh - 21.8rem);
-    }
-  }
+}
 
+.loading-data {
+  width: 100%;
+  height: 100%;
+  //min-height: $table-content-wrap-height;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+}
+.no-data {
+  width: 100%;
+  height: 100%;
+  //min-height: $table-content-wrap-height;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
 }
 
 .table-wrap {
