--- a/pages/data/common/salesAnalyze/salesAnalyze.module.scss
+++ b/pages/data/common/salesAnalyze/salesAnalyze.module.scss
@@ -1,4 +1,4 @@
-.brand {
+.analyze {
   .row {
     @include data-content-row;
 
@@ -52,6 +52,25 @@
     }
   }
 
+}
+
+.loading-data {
+  width: 100%;
+  height: 100%;
+  //min-height: $table-content-wrap-height;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+}
+.no-data {
+  width: 100%;
+  height: 100%;
+  //min-height: $table-content-wrap-height;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
 }
 
 .table-wrap {
