feat: 회사선택 팝업 클릭 방식 변경

--- a/src/components/data/renderTable/renderTable.module.scss
+++ b/src/components/data/renderTable/renderTable.module.scss
@@ -58,6 +58,12 @@
           background-color: #fffae3;
         }
       }
+      tr.mouseover {
+        td {
+          font-weight:bold;
+          cursor: pointer;
+        }
+      }
       tr.total {
         td {
           font-weight: 700;
