--- a/src/components/data/renderTable/renderTable.module.scss
+++ b/src/components/data/renderTable/renderTable.module.scss
@@ -62,6 +62,7 @@
         td {
           font-weight:bold;
           cursor: pointer;
+          background-color: #fffae3;
         }
       }
       tr.total {
