--- a/src/components/data/leftNavigation/leftNavigation.module.scss
+++ b/src/components/data/leftNavigation/leftNavigation.module.scss
@@ -93,6 +93,9 @@
             &.sales-analyze-select::before {
               background: url("/assets/images/data/ico_nav_sales_channel_off.png") no-repeat 50% 50% / contain;
             }
+            &.sales-analyze-store::before {
+              background: url("/assets/images/data/ico_nav_sales_channel_off.png") no-repeat 50% 50% / contain;
+            }
           }
           button.active {
             &.company::before {
@@ -129,6 +132,9 @@
               background: url("/assets/images/data/ico_nav_sales_analyze_on.png") no-repeat 50% 50% / contain;
             }
             &.sales-analyze-select::before {
+              background: url("/assets/images/data/ico_nav_sales_channel_on.png") no-repeat 50% 50% / contain;
+            }
+            &.sales-analyze-store::before {
               background: url("/assets/images/data/ico_nav_sales_channel_on.png") no-repeat 50% 50% / contain;
             }
           }
