--- a/pages/data/common/storeAccount/storeAccount.module.scss
+++ b/pages/data/common/storeAccount/storeAccount.module.scss
@@ -33,5 +33,60 @@
     &.full-height {
       min-height: calc(100vh - 21.8rem);
     }
+
+    table {
+      th {
+        &:nth-of-type(1) {
+          min-width: 55px;
+          position: sticky;
+          left: 0;
+          z-index: 2;
+        }
+        &:nth-of-type(3) {
+          min-width: 110px;
+          position: sticky;
+          left: 56px;
+          z-index: 2;
+        }
+        &:nth-of-type(5) {
+          min-width: 110px;
+          position: sticky;
+          left: 166px;
+          z-index: 2;
+        }
+        &:nth-of-type(6) {
+          min-width: 90px;
+          position: sticky;
+          left: 276px;
+          z-index: 2;
+        }
+      }
+      td {
+        &:nth-of-type(1) {
+          min-width: 55px;
+          position: sticky;
+          left: 0;
+          z-index: 2;
+        }
+        &:nth-of-type(3) {
+          min-width: 110px;
+          position: sticky;
+          left: 56px;
+          z-index: 2;
+        }
+        &:nth-of-type(5) {
+          min-width: 110px;
+          position: sticky;
+          left: 166px;
+          z-index: 2;
+        }
+        &:nth-of-type(6) {
+          min-width: 90px;
+          position: sticky;
+          left: 276px;
+          z-index: 2;
+        }
+      }
+    }
   }
 }
